--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <!-- Brush -->
       <div class="brush tool">
         <i class="fas fa-brush" id="brush" title="Brush"></i>
-        <input type="color" />
+        <input class="jscolor" id="brush-color" value="a51dab" />
         <span class="size" id="brush-size" title="Brush Size">10</span>
         <input
           type="range"
@@ -34,7 +34,7 @@
       <!-- Bucket -->
       <div class="bucket tool">
         <i class="fas fa-fill-drip" title="Background Color"></i>
-        <input type="color" />
+        <input class="jscolor" id="bucket-color" value="ffffff" />
       </div>
       <!-- Eraser -->
       <div class="tool">
@@ -76,7 +76,13 @@
       </div>
     </div>
 
+    <!-- Mobile Message -->
+    <div class="mobile-message">
+      <h2>Please us application on larger screen</h2>
+    </div>
+
     <!-- Script -->
+    <script src="./jscolor.js"></script>
     <script src="script.js"></script>
   </body>
 </html>
